# water-simulation

./: Cargo.toml  README.md
examples/: angry-heart.mov  big-snail.mov  maze.mov  real-cup-problem-2.mov  real-cup-problem.mov  snail.mov
src/: main.rs
