[package]
name = "water-simulation"
version = "0.1.1"
edition = "2021"
description = "A water simulation written in Rust"
license = "MIT"
exclude = ["examples/"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.5", features = ["derive"] }
env_logger = "0.10.0"
image = "0.24.6"
log = "0.4.19"
