[package]
name = "water-simulation"
version = "0.1.2"
edition = "2021"
description = "A water simulation written in Rust"
license = "MIT"
exclude = ["examples/"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.3.5", features = ["derive"] }
env_logger = "0.10.0"
image = "0.24.6"
itertools = "0.12.0"
log = "0.4.19"
rayon = "1.8.0"
tap = "1.0.1"
